ghc-4335c07/testsuite/tests/typecheck/should_fail/T11355.hs
{-# LANGUAGE TypeApplications, RankNTypes #-}

module T11355 where

foo = const @_ @((forall a. a) -> forall a. a) () (id @(forall a. a))
